--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <header class = "hero">
-        <h1 class="title"><i class="bookings"></i>Pasting Bookings</h1>
+        <h1 class="title"><i class="bookings"></i>Pasting Bookings2</h1>
     </header>
     <div id="movieCard" class="card">
         <img id="posterImage">
-        <h2 id="movieTitle">Title</h2>
-        <p id="movieDescription">Description</p>
+        <h2 id="movieTitle">Title2</h2>
+        <p id="movieDescription">Description2</p>
       </div>
       <div class="card">
-            <button type="booking" class="backbtn">Back</button>
+            <button type="booking" class="backbtn">Back2</button>
         </div>
     </body>
 </html>
